--- a/code/site/src/pages/home/home.html
+++ b/code/site/src/pages/home/home.html
@@ -64,6 +64,9 @@
                 <div class="row">
                     <button type="submit">Accedi</button>
                 </div>
+                <div class="row" style="margin-top: 10px; text-decoration: underline;">
+                    <a href="#" id="goToSignUp">Non hai un account? Registrati ora</a>
+                </div>
             </form>
         </div>
     </div>
