--- a/code/admin/src/pages/film/film.html
+++ b/code/admin/src/pages/film/film.html
@@ -49,7 +49,7 @@
                     <ul class="list-unstyled navbar__list">
                         <li>
                             <a href="../home/home.php">
-                                <i class="fas fa-tachometer-alt"></i>Panoramica</a>
+                                <i class="fas fa-bar-chart-o"></i>Panoramica</a>
                         </li>
                         <li class="active has-sub">
                             <a class="js-arrow" href="#">
@@ -119,8 +119,10 @@
                             <div class="col-md-12">
                                 <div class="overview-wrap">
                                     <h2 class="title-1"><i class="zmdi zmdi-movie"></i> FILM</h2>
-                                    <button class="au-btn au-btn-icon au-btn--blue">
-                                        <i class="zmdi zmdi-plus"></i>Aggiungi Film</button>
+                                    <a class="au-btn au-btn-icon au-btn--blue" href="../addFilm/addfilm.php">
+                                        <i class="zmdi zmdi-plus"></i>Aggiungi Film
+                                    </a>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -133,13 +135,13 @@
                                                 <th>Titolo</th>
                                                 <th class="text-center">
                                                     <i class="zmdi zmdi-calendar"> </i>
-                                                    Data Pubblicazione
+                                                    Pubblicazione
                                                 </th>
                                                 <th class="text-center">
                                                     <i class="zmdi zmdi-star"> </i>
                                                     Media Voti
                                                 </th>
-                                                <th class="text-center">
+                                                <th class="text-center non-tronca">
                                                     <i class="zmdi zmdi-edit"> </i>
                                                     Recensioni
                                                 </th>
@@ -162,11 +164,15 @@
                                                     <i class="zmdi zmdi-star"> </i>
                                                     <?php echo $film['media_voti'] ?>
                                                 </td>
-                                                <td class="text-center">
+                                                <td class="text-center non-tronca">
                                                     <?php echo $film['numero_recensioni'] ?>
                                                 </td>
-                                                <td class="text-center"><a style="cursor: pointer;"><i
-                                                            class="zmdi zmdi-edit"> </i></a></td>
+                                                <td class="text-center">
+                                                    <a style="cursor: pointer;"
+                                                        href="../addFilm/addfilm.php?id=<?php echo $film['id']?>">
+                                                        <i class="fas fa-edit"></i>
+                                                    </a>
+                                                </td>
                                             </tr>
                                             <?php } ?>
                                         </tbody>
