--- a/code/admin/src/pages/serie/serie.html
+++ b/code/admin/src/pages/serie/serie.html
@@ -49,7 +49,7 @@
                     <ul class="list-unstyled navbar__list">
                         <li>
                             <a href="../home/home.php">
-                                <i class="fas fa-tachometer-alt"></i>Panoramica</a>
+                                <i class="fas fa-bar-chart-o"></i>Panoramica</a>
                         </li>
                         <li class="active has-sub">
                             <a class="js-arrow" href="#">
@@ -133,13 +133,13 @@
                                                 <th>Titolo</th>
                                                 <th class="text-center">
                                                     <i class="zmdi zmdi-calendar"> </i>
-                                                    Data Pubblicazione
+                                                    Pubblicazione
                                                 </th>
                                                 <th class="text-center">
                                                     <i class="zmdi zmdi-star"> </i>
                                                     Media Voti
                                                 </th>
-                                                <th class="text-center">
+                                                <th class="text-center non-tronca">
                                                     <i class="zmdi zmdi-edit"> </i>
                                                     Recensioni
                                                 </th>
@@ -162,11 +162,14 @@
                                                     <i class="zmdi zmdi-star"> </i>
                                                     <?php echo $serie['media_voti'] ?>
                                                 </td>
-                                                <td class="text-center">
+                                                <td class="text-center non-tronca">
                                                     <?php echo $serie['numero_recensioni'] ?>
                                                 </td>
-                                                <td class="text-center"><a style="cursor: pointer;"><i
-                                                            class="zmdi zmdi-edit"> </i></a></td>
+                                                <td class="text-center">
+                                                    <a style="cursor: pointer;">
+                                                        <i class="fas fa-edit"></i>
+                                                    </a>
+                                                </td>
                                             </tr>
                                             <?php } ?>
                                         </tbody>
