--- a/code/admin/src/pages/celebrita/celebrita.html
+++ b/code/admin/src/pages/celebrita/celebrita.html
@@ -118,8 +118,8 @@
                         <div class="row" style="margin-bottom: 40px;">
                             <div class="col-md-12">
                                 <div class="overview-wrap">
-                                    <h2 class="title-1"><i class="zmdi zmdi-movie-alt"></i> CELEBRITÀ</h2>
-                                    <button class="au-btn au-btn-icon au-btn--blue">
+                                    <h2 class="title-1"><i class="zmdi zmdi-account"></i> CELEBRITÀ</h2>
+                                    <button class=" au-btn au-btn-icon au-btn--blue">
                                         <i class="zmdi zmdi-plus"></i>Aggiungi celebrità</button>
                                 </div>
                             </div>
